- fixed '{}' (empty hash)
- implemented additional Array and Hash methods
- $?PUGS_BACKEND returns 'BACKEND_PERL5'
- implemented @*INC
- %hash = ( { a => 1 }, { b => 2 } ) works

0.013  2006-08-09

- includes precompiled v6 modules: Perl6Prelude.pm, Test.pm
- new grammatical categories: 'quote', 'statement_modifier'

0.012  2006-08-08

- faster compilation due to improved grammatical categories dispatching
  and lazy rule compilation
- 'statement_control' grammatical category implemented

0.011  2006-07-24

- basic regex parsing and matching
- grammar/rule parsing
- support := with Data::Bind::bind_op2
- basic hash support
- class name barewords are allowed. Str and Bool in Prelude
- implement $?POSITION and $?CALLER::POSITION.
- 788 tests pass

0.010  2006-07-17

- better support for array and hash syntax; - clkao++
  'sub' declarations are terms:
    @b.map(sub ($x, $y) { $x + $y })
- 'loop' - clkao++
- fixed HACKING file formatting - snowstalker++
- fixed docs on 'use v6-alpha' - dduncan++
- 538 tests pass

0.009  2006-07-14

- reduce operators: say [*] 1..5
- 499 tests pass

0.008  2006-07-14

- 'use perl5:CGI'
- chain operators
- fixed precedence table

0.007  2006-07-12

- added HACKING file
- added Pugs::Runtime::Perl6Prelude
- added t/Test.pm
-- unmodified copy of pugs ext/Test/lib/Test.pm
- parsing is now done one statement at a time 
-- this cuts memory needs by half while compiling Test.pm
- use v5; ... use v6;
-- inlines perl 5 code
- named enums
- bool::True, bool::False, true()
- unless, while
- setting $ENV{V6DUMPAST} can now be used for debugging the syntax tree

0.006  2006-07-06

- we now no longer use Parse::Yapp
- all expression parsing is done with Perl 6 grammar
- regex/token/rule declarations in Perl 6 are parsed
- uses Moose 0.10 for Perl 6 classes and objects
- squash warnings

0.005  2006-07-05

- all sanity tests, up and includes Test.pm from Pugs test suite, now passes
- uses Data::Bind for calling convention
- 'expr unless/if expr;'
