@@ -1,8 +1,9 @@
 - fixed '{}' (empty hash)
 - implemented additional Array and Hash methods
 - $?PUGS_BACKEND returns 'BACKEND_PERL5'
-- implemented @*INC
+- implemented @*INC, $?OS
 - %hash = ( { a => 1 }, { b => 2 } ) works
+- 'my' works inside '//' and 'err'
 
 0.013  2006-08-09
 
